display latest 5 question on the main page

--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             </th>
         </tr>
     </thead>
-    @foreach (QuestionModel question in Model.GetQuestions())
+    @foreach (QuestionModel question in Model.GetLatestFiveQuestion())
     {
         <tr>
             <td class="">
