--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -73,6 +73,7 @@
                     <div class="card-header">
                         #@answer.Id
                         <span class="float-right">
+                            @Html.ActionLink("Edit", "edit_answer", new { id = answer.GetUnique() })
                             @Html.ActionLink("Delete", "delete", new { id = answer.GetUnique() }, new { @class = "text-danger" })
                             <!----
                             <a asp-controller="Home" asp-action="DeleteAnswer" href="#" class="text-danger">Delete</a>
