--- a/AskMate/AskMate/wwwroot/css/Index.css
+++ b/AskMate/AskMate/wwwroot/css/Index.css
@@ -87,3 +87,24 @@
   height: 192px;
   border-radius: 4px;
 }
+
+.text-date
+{
+  color: rgb(93, 93, 93);
+  text-decoration: underline;
+  font-size: small;
+}
+
+.container-comment
+{
+  min-width: 0;
+  flex-basis: 0;
+  align-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+}
+
+hr
+{
+  border-top: 1px solid rgb(255, 255, 255);
+}
