--- a/AskMate/AskMate/Views/Home/Answer_Edit.cshtml
+++ b/AskMate/AskMate/Views/Home/Answer_Edit.cshtml
@@ -36,7 +36,7 @@
 
     <div class="float-right">
         <span>
-            @Html.ActionLink("Back", "Index", "Home", null, new { @class = "btn btn-danger ml-auto mr-1" })
+            @Html.ActionLink("Back", "question", new { id = Model.Question_Id }, new { @class = "btn btn-danger ml-auto mr-1" })
         </span>
     </div>
 }
