new index style

--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -16,8 +16,9 @@
   <input type="submit" value="Show!">
 }
 
-<table class="table table-hover table-dark">
-    <thead>
+<br>
+<table class="table table-striped">
+    <thead class="table-dark">
         <tr>
             <th class="th-sm">
                 #ID
