--- a/AskMate/AskMate/Views/Question/Index.cshtml
+++ b/AskMate/AskMate/Views/Question/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h1>Add a new question</h1>
 
+
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 @using (Html.BeginForm("Index", "Question", FormMethod.Post))
 {
     <div class="form-group">
@@ -16,6 +18,19 @@
         <label for="">Question</label>
         @Html.TextBoxFor(m => m.Content, new { @class = "form-control", @required = "" })
     </div>
+
+    <!--<div class="row">
+        <input type="hidden" name="count" value="1" />
+        <div class="control-group" id="fields">
+            <label class="control-label" for="field1">Tags</label>
+            <div class="controls" id="profs">
+                <form class="input-append">
+                    <div id="field"><input autocomplete="off" class="input" id="field1" name="prof1" type="text" placeholder="Tag here" data-items="8" /><button id="b1" class="btn btn-light add-more" type="button">+</button></div>
+                </form>
+            </div>
+        </div>
+    </div>
+    -->
     <button type="submit" class="btn btn-success">Add</button>
     <div class="float-right">
         <span>
@@ -24,4 +39,34 @@
     </div>
 
 }
+<script type="text/javascript">
+    $(document).ready(function () {
+        var next = 1;
+        $(".add-more").click(function (e) {
+            e.preventDefault();
+            var addto = "#field" + next;
+            var addRemove = "#field" + (next);
+            next = next + 1;
+            var newIn = '<input autocomplete="off" class="input form-control" id="field' + next + '" name="field' + next + '" type="text">';
+            var newInput = $(newIn);
+            var removeBtn = '<button id="remove' + (next - 1) + '" class="btn btn-danger remove-me" >-</button></div><div id="field">';
+            var removeButton = $(removeBtn);
+            $(addto).after(newInput);
+            $(addRemove).after(removeButton);
+            $("#field" + next).attr('data-source', $(addto).attr('data-source'));
+            $("#count").val(next);
 
+            $('.remove-me').click(function (e) {
+                e.preventDefault();
+                var fieldNum = this.id.charAt(this.id.length - 1);
+                var fieldID = "#field" + fieldNum;
+                $(this).remove();
+                $(fieldID).remove();
+            });
+        });
+
+
+
+    });
+
+</script>
