--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -134,7 +134,7 @@
             <label>Add a new answer:</label>
             <textarea class="form-control-plaintext  bg-dark text-white" style="border-radius: 1rem;" name="answer" required></textarea>
             <label>Add image</label>
-            <input type="hidden" name="type" value="ans" />
+            <input type="hidden" name="type" value="answer" />
             <div class="custom-file">
                 <input class="form-control custom-file-input" type="file" name="file" />
                 <label class="custom-file-label">Browse</label>
