update answer content done!

--- a/AskMate/AskMate/Views/Home/Answer_Edit.cshtml
+++ b/AskMate/AskMate/Views/Home/Answer_Edit.cshtml
@@ -31,7 +31,7 @@
             </a>
         </div>
     }
-    <input type="hidden" value="@Model.GetUnique()" name="id" />
+    <input type="hidden" value="@Model.Id" name="id" />
     <button class="btn btn-success" type="submit">Edit</button>
 
     <div class="float-right">
