--- a/AskMate/AskMate/Views/Question/Index.cshtml
+++ b/AskMate/AskMate/Views/Question/Index.cshtml
@@ -19,6 +19,10 @@
         @Html.TextBoxFor(m => m.Content, new { @class = "form-control", @required = "" })
     </div>
 
+    <div class="form-group">
+        @Html.TextAreaFor(m => m.ownTags, new { @class = "form-control" })
+    </div>
+
     <!--<div class="row">
         <input type="hidden" name="count" value="1" />
         <div class="control-group" id="fields">
