--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -37,8 +37,8 @@
                 <th class="th-sm text-center">
                     <button class="btn btn-outline-warning" type="submit" name="order" value="id">#ID</button>
                 </th>
-                <th class="">
-                    Tags
+                <th class="th-sm text-center">
+                    <button class="btn btn-outline-warning" disabled>Tags</button>
                 </th>
                 <th class="th-sm text-center">
                     <button class="btn btn-outline-warning" type="submit" name="order" value="title">Title</button>
