--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -103,6 +103,7 @@
                         }
                         <h6 class="card-title">@answer.Content</h6>
                         <p class="text-date">@answer.GetDate()</p>
+                        <div style="padding-bottom: 100px;"></div>
                         @* COMMENTS BELOW *@
                         @foreach (var comment in answer.Comments)
                         {
