--- a/AskMate/AskMate/Views/Shared/_Layout.cshtml
+++ b/AskMate/AskMate/Views/Shared/_Layout.cshtml
@@ -25,8 +25,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tags">Tags</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        
                         @Html.ActionLink(
                             "New Question",
                             "Index",                         // controller action
