--- a/AskMate/AskMate/Views/Shared/_Layout.cshtml
+++ b/AskMate/AskMate/Views/Shared/_Layout.cshtml
@@ -30,13 +30,31 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        
-                        @Html.ActionLink(
-                            "New Question",
-                            "Index",                         // controller action
-                            "Question",        // controller
-                            null,         // action parameters aka route values
-                            new { @class = "btn btn-success ml-auto mr-1" })
+
+                        <li class="nav-item">
+                            @Html.ActionLink(
+                                "Sign up",
+                                "Register",                         // controller action
+                                "Account",        // controller
+                                null,         // action parameters aka route values
+                                new { @class = "btn btn-warning ml-auto mr-1" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink(
+                                "Profiles",
+                                "Index",                         // controller action
+                                "Profile",        // controller
+                                null,         // action parameters aka route values
+                                new { @class = "btn btn-warning ml-auto mr-1" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink(
+                                "New Question",
+                                "Index",                         // controller action
+                                "Question",        // controller
+                                null,         // action parameters aka route values
+                                new { @class = "btn btn-success ml-auto mr-1" })
+                        </li>
                     </ul>
 
 
