--- a/AskMate/AskMate/Views/Profile/Index.cshtml
+++ b/AskMate/AskMate/Views/Profile/Index.cshtml
@@ -16,7 +16,11 @@
     {
         <tr>
             <td class="text-center">@user.Id</td>
-            <td class="text-center">@user.Name</td>
+
+            <td class="text-center">
+                @Html.ActionLink(user.Name, "user", "Profile", new { id = user.Id })
+            </td>
+
             <td class="text-center">@user.Email</td>
             <td class="text-center">@user.GetDate()</td>
             <td class="text-center">@user.Reputation</td>
