--- a/AskMate/AskMate/Views/Profile/Index.cshtml
+++ b/AskMate/AskMate/Views/Profile/Index.cshtml
@@ -5,7 +5,7 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th class="th-sm text-center">ID</th>
+            <th class="th-sm text-center">#ID</th>
             <th class="th-sm text-center">Name</th>
             <th class="th-sm text-center">E-mail</th>
             <th class="th-sm text-center">Registration date</th>
