--- a/AskMate/AskMate/Views/Account/Login.cshtml
+++ b/AskMate/AskMate/Views/Account/Login.cshtml
@@ -9,8 +9,8 @@
         <label>E-mail</label>
         <input type="text" name="email" />
 
-        <label>Username</label>
-        <input type="text" name="name" />
+        @*<label>Username</label>
+        <input type="text" name="name" />*@
 
         <label>Password</label>
         <input type="password" name="password" />
