--- a/AskMate/AskMate/Views/Shared/_Layout.cshtml
+++ b/AskMate/AskMate/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                                 "Index",                         // controller action
                                 "Profile",        // controller
                                 null,         // action parameters aka route values
-                                new { @class = "btn btn-warning ml-auto mr-1" })
+                                new { @class = "btn btn-warning" })
                         </div>
                         <div class="float-right">
                             @Html.ActionLink(
@@ -51,10 +51,10 @@
                                 "Index",                         // controller action
                                 "Question",        // controller
                                 null,         // action parameters aka route values
-                                new { @class = "btn btn-success ml-auto mr-1" })
+                                new { @class = "btn btn-success" })
                         </div>
                         <div class="float-right">
-                            
+
                             @Html.ActionLink("Log Out", "Logout", "Account", null, new { @class = "btn btn-danger" })
                         </div>
                     }
@@ -66,7 +66,7 @@
                                 "Register",                         // controller action
                                 "Account",        // controller
                                 null,         // action parameters aka route values
-                                new { @class = "btn btn-warning ml-auto mr-1" })
+                                new { @class = "btn btn-warning" })
                         </div>
                         <div class="float-right">
                             @Html.ActionLink("Log In", "Login", "Account", null, new { @class = "btn btn-success" })
