Tags nav button completed

--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    bool searched = false;
+    //bool searched = false;
 }
 
 @model IDAO_Impl
@@ -19,7 +19,7 @@
             <input type="submit" value="Show!">
         }
         <div class="float-right">
-            @using (Html.BeginForm("Search", "Home", FormMethod.Post))
+            @using (Html.BeginForm("Search", "Home", FormMethod.Get))
             {
                 <input type="text" name="search" placeholder="Search by title/description..." value="@Model.SearchText" size="25">
                 <input type="submit" value="Search!">
