--- a/AskMate/AskMate/Views/Question/Index.cshtml
+++ b/AskMate/AskMate/Views/Question/Index.cshtml
@@ -20,6 +20,7 @@
     </div>
 
     <div class="form-group">
+        <label for="">Tags (separated by ',')</label>
         @Html.TextAreaFor(m => m.ownTags, new { @class = "form-control" })
     </div>
 
