bind question to user

--- a/AskMate/AskMate/Views/Question/Index.cshtml
+++ b/AskMate/AskMate/Views/Question/Index.cshtml
@@ -36,6 +36,7 @@
         </div>
     </div>
     -->
+    <input type="hidden" name="user_email" value="@User.Claims.First().Value" />
     <button type="submit" class="btn btn-success">Add</button>
     <div class="float-right">
         <span>
